@@ -4,16 +4,16 @@
     "jqueryValidation":true,
     "placeholderJavascript":"JsonFormBuilder_myForm",
 
-    "emailToAddress": "your@address.com",
-    "emailFromAddress": "from@nowhere.com",
-    "emailFromName": "Test User",
+    "emailToAddress": "[[++emailsender]]",
+    "emailFromAddress": "[[+postVal.email_address]]",
+    "emailFromName": "[[+postVal.name_full]]",
     "emailSubject": "JsonFormBuilder Contact Form Submission",
     "emailHeadHtml": "<p>This is a response from the contact us form:</p>",
     
     "elements": [
-        {"element":"text", "id":"name_full", "label":"Name", "extraClasses":["half"], "rules":["required"] },
+        {"element":"text", "id":"name_full", "label":"Name", "extraElementAttribs":{"placeholder":"test","class":"custom-class"}, "extraClasses":["half"], "rules":["required"] },
         {"element":"text", "id":"email_address", "label":"Email Address", "extraClasses":["half"], "rules":["required","email"] },
-        {"element":"textArea", "id":"notes", "label":"Comments", "rows":5, "columns":30, "rules":["required"]},
-        {"element":"button", "id":"submit", "label":"Submit From", "type":"Submit"}
+        {"element":"textArea", "id":"notes", "label":"Comments", "rows":5, "columns":30, "extraClasses":["full"], "rules":["required"]},
+        {"element":"button", "id":"submit", "label":"Submit From", "type":"submit"}
     ]
 }
